--- a/index.html
+++ b/index.html
@@ -2,180 +2,111 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sign In App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign In App</title>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#ffffff" />
   <style>
     body {
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      padding: 20px;
-      max-width: 500px;
-      margin: auto;
-      transition: background 0.3s, color 0.3s;
+      margin: 0;
+      font-family: "Segoe UI", Roboto, sans-serif;
+      background-color: #f4f4f4;
+      color: #222;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
-    h1, h2 {
-      margin-top: 0;
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #121212;
+        color: #f0f0f0;
+      }
     }
-    input, select, button {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      box-sizing: border-box;
-      font-size: 16px;
+
+    .logo {
+      position: fixed;
+      height: 60px;
+      width: auto;
+      z-index: 1000;
+      opacity: 0.9;
+      transition: transform 0.3s ease;
     }
+
+    .logo:hover {
+      transform: scale(1.1);
+    }
+
+    .logo-top-left {
+      top: 20px;
+      left: 20px;
+    }
+
+    .logo-bottom-right {
+      bottom: 20px;
+      right: 20px;
+    }
+
+    .logo-light {
+      content: url('logo-light.png');
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .logo-light {
+        content: url('logo-dark.png');
+      }
+    }
+
+    .container {
+      padding: 100px 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2rem;
+    }
+
     button {
-      background: #4CAF50;
-      color: white;
+      padding: 10px 20px;
+      font-size: 1rem;
+      margin: 10px;
       border: none;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s;
+      background-color: #007bff;
+      color: white;
+      transition: background-color 0.3s ease, transform 0.2s;
     }
+
     button:hover {
-      background: #45a049;
-      transform: scale(1.02);
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    li {
-      background: var(--item-bg);
-      margin: 5px 0;
-      padding: 10px;
-      border-radius: 5px;
-    }
-    #themeToggle {
-      background: #555;
-      margin-top: 20px;
+      background-color: #0056b3;
+      transform: scale(1.05);
     }
 
-    /* Light theme */
-    body.light {
-      background: #f5f5f5;
-      color: #333;
-      --item-bg: #fff;
-    }
+    @media (prefers-color-scheme: dark) {
+      button {
+        background-color: #339af0;
+        color: #000;
+      }
 
-    /* Dark theme */
-    body.dark {
-      background: #121212;
-      color: #f0f0f0;
-      --item-bg: #1e1e1e;
+      button:hover {
+        background-color: #1c7ed6;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Sign In App</h1>
 
-  <h2>Sign In</h2>
-  <input id="nameInput" placeholder="Enter name" />
-  <button id="signInBtn">Sign In</button>
+  <!-- Logos -->
+  <img class="logo logo-top-left logo-light" alt="Top Logo">
+  <img class="logo logo-bottom-right logo-light" alt="Bottom Logo">
 
-  <h2>Currently Signed In</h2>
-  <ul id="signedInList"></ul>
+  <div class="container">
+    <h1>Welcome to the Sign In App</h1>
+    <button onclick="signIn()">Sign In</button>
+    <button onclick="signOut()">Sign Out</button>
+    <button onclick="viewSignedIn()">View Signed In</button>
+  </div>
 
-  <h2>Sign Out</h2>
-  <select id="signOutSelect">
-    <option value="">Select person</option>
-  </select>
-  <button id="signOutBtn">Sign Out</button>
-
-  <button id="themeToggle">Toggle Light/Dark Mode</button>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getFirestore, collection, addDoc, deleteDoc, doc, onSnapshot, serverTimestamp, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
-
-    // ✅ Firebase Config
-    const firebaseConfig = {
-      apiKey: "AIzaSyBP_07YnGi79bOMY1K6mm3gHVgk2-UUb_o",
-      authDomain: "sign-in-backend-bfd1d.firebaseapp.com",
-      projectId: "sign-in-backend-bfd1d",
-      storageBucket: "sign-in-backend-bfd1d.firebasestorage.app",
-      messagingSenderId: "480221653864",
-      appId: "1:480221653864:web:02bf18eba295f8f87d04dd",
-      measurementId: "G-35MJBXS97H"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    const nameInput = document.getElementById('nameInput');
-    const signInBtn = document.getElementById('signInBtn');
-    const signedInList = document.getElementById('signedInList');
-    const signOutSelect = document.getElementById('signOutSelect');
-    const signOutBtn = document.getElementById('signOutBtn');
-    const themeToggle = document.getElementById('themeToggle');
-
-    const signinsCol = collection(db, "signins");
-
-    // ✅ Daily auto-clear at 4 AM
-    const checkAndClearDaily = async () => {
-      const lastCleared = localStorage.getItem('lastClearedDate');
-      const now = new Date();
-      const today = now.toISOString().split('T')[0];
-      const hour = now.getHours();
-      if (hour >= 4 && lastCleared !== today) {
-        const snapshot = await getDocs(signinsCol);
-        snapshot.forEach(docSnap => {
-          deleteDoc(doc(signinsCol, docSnap.id));
-        });
-        localStorage.setItem('lastClearedDate', today);
-        console.log("Cleared at 4 AM");
-      }
-    };
-    checkAndClearDaily();
-
-    // ✅ Sign In
-    signInBtn.onclick = async () => {
-      const name = nameInput.value.trim();
-      if (!name) return alert("Please enter a name");
-      await addDoc(signinsCol, {
-        name: name,
-        signInTime: serverTimestamp()
-      });
-      nameInput.value = "";
-    };
-
-    // ✅ Sign Out + auto-close select
-    signOutBtn.onclick = async () => {
-      const id = signOutSelect.value;
-      if (!id) return alert("Please select a name to sign out");
-      await deleteDoc(doc(signinsCol, id));
-      signOutSelect.value = "";
-    };
-
-    // ✅ Live updates
-    onSnapshot(query(signinsCol, orderBy('signInTime')), snapshot => {
-      signedInList.innerHTML = "";
-      signOutSelect.innerHTML = '<option value="">Select person</option>';
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        const id = docSnap.id;
-        const li = document.createElement("li");
-        li.textContent = data.name;
-        signedInList.appendChild(li);
-        const option = document.createElement("option");
-        option.value = id;
-        option.textContent = data.name;
-        signOutSelect.appendChild(option);
-      });
-    });
-
-    // ✅ Light/Dark Theme Toggle
-    const setTheme = (theme) => {
-      document.body.className = theme;
-      localStorage.setItem('theme', theme);
-    };
-
-    // Load saved theme or default to light
-    const savedTheme = localStorage.getItem('theme') || 'light';
-    setTheme(savedTheme);
-
-    themeToggle.onclick = () => {
-      const current = document.body.className;
-      const newTheme = current === 'light' ? 'dark' : 'light';
-      setTheme(newTheme);
-    };
-  </script>
+  <!-- Your app logic -->
+  <script src="app.js"></script>
 </body>
 </html>
